Closes #24, Closes #25: Fix scrolling jumpiness
Must offset the main div with a margin once
the sidebar affixes to the top

--- a/app/styles/base/_structure.scss
+++ b/app/styles/base/_structure.scss
@@ -58,6 +58,10 @@ aside {
   &.affix {
     top: 13rem;
   }
+
+  &.affix + main {
+    margin-top: 132px;
+  }
   & > ul {
     margin-bottom: 0;
     padding: 0 4rem;
